--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Geometric Patterns",
+  "name": "Circular Clone",
   "id": "1293584912289096542",
   "api": "1.0.0",
   "main": "code.js",
